# tech-chat

./: .gitignore  README.md  pyproject.toml
backend/: main.py  manage.py
backend/tech_chat/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
notebooks/: coolblue.py
